app-code/apprise/apprise-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apprise-ingress
  namespace: monitoring
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`apprise.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: monitoring}]
      services: [{name: apprise-svc, port: 8000}]
